nginx-ingress-cel/disallow-ingress-nginx-custom-snippets/.chainsaw-test/cm-good.yaml
apiVersion: v1
data:
  allow-snippet-annotations: "false"
kind: ConfigMap
metadata:
  name: config-map-false
---
apiVersion: v1
data:
  random: "someval"
kind: ConfigMap
metadata:
  name: config-map-other
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: config-map-empty
