nginx-ingress-cel/disallow-ingress-nginx-custom-snippets/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-ingress-nginx-custom-snippets
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disallow-ingress-nginx-custom-snippets.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: cm-good.yaml
    - apply:
        file: ig-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: cm-bad.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ig-bad.yaml
